# rust-chat

./: Cargo.toml
src/: lib.rs  main.rs  proto.rs  room.rs  server.rs
src/model/: feed.rs  message.rs  user.rs
