[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
log = "0.4.17"
env_logger = "0.9.0"
chrono = { version = "0.4.11", features = ["serde"] }
regex = "1.6.0"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
futures = "0.3.5"
tokio = { version = "1.20.0", features = ["full"] }
warp = "0.3.1"